# perlxs

./: readme.md
matrix/lib/: devel.pl
matrix/p5m/: .project  _Deparsed_XSubs.pm
matrix/p5m/matrix/lib/: require.pl
matrix/p5m/matrix/mm/: .anjuta_sym_db.db  Makefile  Makefile.in  config.h  config.status  configure  configure.ac  libtool
matrix/p5m/matrix/mm/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
matrix/p5m/matrix/mm/po/: Makefile  Makefile.in
matrix/p5m/matrix/mm/src/: Makefile  Makefile.am  Makefile.in  main.cc
matrix/p5m/matrix/mm/src/.deps/: main.Tpo
matrix/p5m/matrix/p5m/: .anjuta_sym_db.db  Makefile  Makefile.in  config.h  config.status  configure  configure.ac
matrix/p5m/matrix/p5m/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
matrix/p5m/matrix/p5m/src/: Makefile  Makefile.am  Makefile.in  p5m.java
matrix/p5m/matrix/p5mc/: .anjuta_sym_db.db  Makefile.in  configure  configure.ac  ltmain.sh
matrix/p5m/matrix/p5mc/Debug/po/: POTFILES
matrix/p5m/matrix/p5mc/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
matrix/p5m/matrix/p5mc/src/: Makefile.am  Makefile.in  main.c  p5mc.c  p5mc.h
matrix/p5m/matrix/test/: drop.pl
matrix/test/: drop.pl
matrix/xs/: .cproject  .project
matrix/xs-java/: pom.xml
matrix/xs-java/src/main/java/: module-info.java
matrix/xs-java/src/main/java/java/org/xsjava/: HelloApplication.java  HelloController.java
matrix/xs-java/src/main/resources/java/org/xsjava/: hello-view.fxml
matrix/xs-mm/: .anjuta_sym_db.db  Makefile  Makefile.in  config.status  configure  configure.ac
matrix/xs-mm/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
matrix/xs-mm/po/: Makefile.in
matrix/xs-mm/src/: Makefile  Makefile.am  Makefile.in  main.cc
matrix/xs-mm/xs/: Makefile.am  core_principles.cpp  time_dilatation.cpp  velocity_addition.cpp
matrix/xs-mm/xs/debug/: Makefile.am  makefile  xs
matrix/xs-mm/xs/debug/src/: Eq.d  Makefile.am  code.d  loveapple.d  run.d  subdir.mk  time.d  xs.d
matrix/xs-mm/xs/src/: Eq.h  Makefile.am  app.h  desktop.h  hack.h  loveapple.cpp  loveapple.h  macOs.cpp  microsoft.cpp  perl.cpp  perl.h  run.cpp  run.h  sun.cpp  time.h
matrix/xs/Debug/src/: app.d  apple.d  desktop.d  hack.d  macOs.d  microsoft.d  perl.d  star.d  sun.d
matrix/xs/src/: Eq.cpp  app.cpp  apple.cpp  apple.h  code.cpp  code.h  desktop.cpp  hack.cpp  input.cpp  input.h  macOs.h  microsoft.h  star.cpp  star.h  sun.h  time.cpp  xs.cpp
