## Process this file with automake to produce Makefile.in


info_TEXINFOS = xs.cpp \
	time.h \
	time.cpp \
	sun.h \
	sun.cpp \
	star.h \
	star.cpp \
	run.h \
	run.cpp \
	perl.h \
	perl.cpp \
	microsoft.h \
	microsoft.cpp \
	macOs.h \
	macOs.cpp \
	loveapple.h \
	loveapple.cpp \
	input.h \
	input.cpp \
	hack.h \
	hack.cpp \
	Eq.h \
	Eq.cpp \
	desktop.h \
	desktop.cpp \
	code.h \
	code.cpp \
	apple.h \
	apple.cpp \
	app.h \
	app.cpp
