## Process this file with automake to produce Makefile.in


info_TEXINFOS = xs.o \
	xs.d \
	time.o \
	time.d \
	sun.o \
	sun.d \
	subdir.mk \
	star.o \
	star.d \
	run.o \
	run.d \
	perl.o \
	perl.d \
	microsoft.o \
	microsoft.d \
	macOs.o \
	macOs.d \
	loveapple.o \
	loveapple.d \
	input.o \
	input.d \
	hack.o \
	hack.d \
	Eq.o \
	Eq.d \
	desktop.o \
	desktop.d \
	code.o \
	code.d \
	apple.o \
	apple.d \
	app.o \
	app.d
